<resources>
    <string name="app_name">Classroom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Submit your assignment here,make sure you do this assignment on time.</string>
    <string name="topic">Basic concepts of binary tree and B+ tree</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="desk_prompt">Choose a designation</string>
    <string name="file_attachment"><u>Click here to see attached document.</u></string>

    <string-array name="desk_array">
        <item>Default</item>
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

    <string-array name="default_array">
        <item>Default</item>
    </string-array>

    <string-array name="batch_array">
        <item>Default</item>
        <item>2020-2021</item>
        <item>2021-2022</item>
        <item>2023-2023</item>
    </string-array>

    <string-array name="semester_array">
        <item>Default</item>
        <item>Semester I</item>
        <item>Semester II</item>
        <item>Semester III</item>
        <item>Semester IV</item>
        <item>Semester V</item>
    </string-array>


</resources>
