<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/edu" />


            <LinearLayout
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/margin_width_339"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_sans"
                        android:hint="First Name"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="3.5sp"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="16.5sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/margin_width_339"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_sans"
                        android:hint="Last Name"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="3.5sp"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="16.5sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/droid_sans"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="3.5sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16.5sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/droid_sans"
                    android:hint="Mobile"
                    android:inputType="number"
                    android:lineSpacingExtra="3.5sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16.5sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/droid_sans"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:lineSpacingExtra="3.5sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="16.5sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="38dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/desk_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/droid_sans"
                    android:lineSpacingExtra="5.9sp"
                    android:text="Designation"
                    android:textColor="@color/primary_text"
                    android:textSize="16.5sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/designation_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/desk_label"
                    android:entries="@array/desk_array"
                    android:prompt="@string/desk_prompt" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/class_Layout"
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/class_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/droid_sans"
                    android:lineSpacingExtra="5.9sp"
                    android:text="Class"
                    android:textColor="@color/primary_text"
                    android:textSize="16.5sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/class_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/class_label"
                    android:entries="@array/default_array" />

            </RelativeLayout>

            <Button

                android:id="@+id/sign_up_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/droid_sans"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/action_sign_in_short"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16.5sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:fontFamily="@font/droid_sans"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/secondary_text"
                android:textSize="12.5sp" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="@dimen/margin_width_339"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:fontFamily="@font/droid_sans"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="14.5sp" />

            <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"

                style="@style/SpinKitView.FadingCircle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                app:SpinKit_Color="@color/colorPrimary" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>